--- a/src/public/index.html
+++ b/src/public/index.html
@@ -136,14 +136,10 @@ Utilizar algoritmos de aprendizaje no supervisados para la predicción
 
 <br>
 Con los datos ya preparados, a continuación se mostrará la imagen del Dendrograma, el cual nos ayudará a comprender la distancia entre los posibles clusters
-<div class="flex justify-center w-100 m-6">
-  <img src="/img/Dendrograma.png" alt=""> <br>
-</div>
+<!-- <div class="flex justify-center w-100 m-6">
+  <img src="/img/Dendograma.png" alt="" width="600px" height="600px"> <br>
+</div> -->
       </div>
-
-
-
-
 
 
       <h3 class="font-bold text-xl mt-5">5. Conclusiones.</h3>
@@ -171,6 +167,8 @@ Con los datos ya preparados, a continuación se mostrará la imagen del Dendrogr
 <div class="flex w-100 justify-around items-center">
   <a class= "text-blue-600 hover:text-blue-700 hover:underline" href="https://colab.research.google.com/drive/1Fj5yGdthM3gHJS1DXFI34X9zupakQ3ui?usp=sharing">Cuaderno de Google Collab</a>
   <a class= "text-blue-600 hover:text-blue-700 hover:underline" href="https://drive.google.com/file/d/1MLGLdpFXSdO6NWwF-wl2y2kRk7F4-2yh/view?usp=sharing">DataSet</a>
+  <a class= "text-blue-600 hover:text-blue-700 hover:underline" href="https://drive.google.com/file/d/1KIaUqNbxo8Sg0Wnxqd5SxP1p-6KwHIcC/view?usp=sharing">Diapositivas</a>
+  <a class= "text-blue-600 hover:text-blue-700 hover:underline" href="https://docs.google.com/document/d/1eQybbkbKi1Ky6eJz81GYe9SXwIqL3u8HtwahaTYM5-I/edit?usp=sharing">Documento</a>
 
 </div>
 </div>
